nginx-deployment.yml
apiVersion: apps/v1
# k8s config file type
kind: Deployment
metadata:
  # deployment name
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: nginx
  # blue print of the pods
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.16
        # port binding 
        ports:
        - containerPort: 80
